# WaterDemo

./: CMakeLists.txt  README.md  camera.cpp  camera.h  conandata.yml  main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h  water_engine.cpp  water_engine.h
include/: tiny_obj_loader.cpp  vk_disp_loader.cpp  vk_include.h
shaders/: input_structures.glsl  mesh.frag  mesh.vert  ocean.frag  ocean.vert  test.comp
shaders/fft-ocean/: butterfly.comp  copy_ppong.comp  fft.comp  permute.comp  spectrum2.comp
simulation/: FFTOcean.h  ShallowWaterSolver.cpp  ShallowWaterSolver.h
utils/: VulkanUtils.cpp  VulkanUtils.h
